Add second section and finish off heading

--- a/index.html
+++ b/index.html
@@ -27,14 +27,34 @@
   <div class="flex container">
     <div class="main-welcome">
       <span>DON'T JUST LOOK, SEE.</span>
-
     </div>
-
   </div>
-
 
 </header>
 
+<!-- featured benefits -->
+
+  <section class="benefits">
+
+    <div class="offer">
+      <img src="./resources/images/paper-icon.png" alt="Comprehensive Exams" class="paper-sheet">
+      <div>Comprehensive Exams</div>
+    </div>
+
+    <div class="offer">
+      <img src="./resources/images/ruler-icon.png" alt="Custom Fittings">
+      <div>Custom Fittings</div>
+    </div>
+
+    <div class="offer">
+      <img src="./resources/images/truck-icon.png" alt="Fast Delivery">
+      <div>Fast Delivery</div>
+    </div>
+
+
+  </section>
+
+  </div>
 
 
   </body>
