--- a/index.html
+++ b/index.html
@@ -51,11 +51,38 @@
       <div>Fast Delivery</div>
     </div>
 
-
   </section>
 
+<!-- About Us section -->
+
+<section class="aboutus container">
+  <div class="info">
+    <div class="title">
+      PHILOSOPHY
+    </div>
+    <p>Over 75% of our brains are dedicated to one sense: vision. We believe everyone deserves to see the
+      world, not matter what. That’s why we offer eye exams, custom fittings, and quick delivery at a low
+      cost. It’s your vision that makes ours.
+    </p>
   </div>
 
+  <div class="info">
+    <div class="title">
+      APPOINTMENTS
+    </div>
+    <p>Schedule an appointment by calling us at (312) 654-0987. We’re open Tuesday - Saturday, 9AM - 6PM.
+    </p>
+  </div>
+</section>
+
+<!-- footer -->
+
+<footer class="container">
+  <img src="./resources/images/logo-black.png" alt="">
+  <div>
+      Copyright Tortoiseshell Optics
+  </div>
+</footer>
 
   </body>
 </html>
