fix div naming for info section

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 <!-- About Us section -->
 
-<section class="aboutus container">
+<section class="benefits container">
   <div class="info">
     <div class="title">
       PHILOSOPHY
@@ -78,7 +78,7 @@
 <!-- footer -->
 
 <footer class="container">
-  <img src="./resources/images/logo-black.png" alt="">
+  <img src="./resources/images/logo-black.png" alt="Logo">
   <div>
       Copyright Tortoiseshell Optics
   </div>
