fix info spacing by adding a separate class to target that section

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 <!-- About Us section -->
 
-<section class="benefits container">
+<section class="benefit container">
   <div class="info">
     <div class="title">
       PHILOSOPHY
