Adjust CSS for mobile view

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <div>
       <img src="./resources/images/logo-white.png" alt="Logo in White">
       <span>Tortoiseshell Optics</span>
-    </div>
     <div class="menu">
       <ul>
         <li>Services</li>
@@ -22,6 +21,11 @@
         <li>Contact</li>
       </ul>
     </div>
+    <div>
+      <span class="mobile">Menu</span>
+    </div>
+  </div>
+
   </nav>
 
   <div class="flex container">
