fix CSS for original desktop design

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div>
       <img src="./resources/images/logo-white.png" alt="Logo in White">
       <span>Tortoiseshell Optics</span>
+    </div>
     <div class="menu">
       <ul>
         <li>Services</li>
@@ -21,10 +22,11 @@
         <li>Contact</li>
       </ul>
     </div>
-    <div>
-      <span class="mobile">Menu</span>
+    <div class="mobile">
+      <ul>
+        <li>Menu</li>
+      </ul>
     </div>
-  </div>
 
   </nav>
 
